# Edge-detection

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edge/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/edgeviewer/: CameraController.kt  GLTextureRenderer.kt  MainActivity.kt  Utils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/edge/: ExampleUnitTest.kt
gl/shaders/: vertex.glsl
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
web/: .gitignore  README.md  SUMMARY.md  index.html  package.json  styles.css  tsconfig.json
web/src/: app.ts  demoData.ts  frameRenderer.ts  statsDisplay.ts  types.ts  websocketClient.ts
